kubernetes/bitwarden/base/statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
    app.kubernetes.io/instance: bitwarden
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  serviceName: bitwarden
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
      annotations:
        enable.version-checker.io/bitwarden: "true"
    spec:
      hostname: bitwarden
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      #   fsGroup: 11024
      #   runAsGroup: 11024
      #   runAsUser: 11024
      containers:
        # renovate: datasource=docker depName=docker.io/vaultwarden/server
        - image: docker.io/vaultwarden/server:1.37.4@sha256:efb3cde962015fcc036b2ea625242248611943b27212ebf4392841fb30fad055
          imagePullPolicy: IfNotPresent
          name: bitwarden
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          # Only Needed For Setup
          # envFrom:
          #  - secretRef:
          #      name: bitwarden-secrets
          securityContext:
            privileged: false
            # runAsGroup: 11024
            # runAsUser: 11024
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              # add: # https://github.com/dani-garcia/vaultwarden/discussions/3374#discussioncomment-5441347
              #   - NET_BIND_SERVICE
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
          volumeMounts:
            - name: bitwarden
              mountPath: /data
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
      automountServiceAccountToken: false
      serviceAccountName: bitwarden
      volumes:
        - name: bitwarden
          persistentVolumeClaim:
            claimName: bitwarden
      enableServiceLinks: false
