kubernetes/bitwarden/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: bitwarden
